# gsl-parser

./: .travis.yml  CMakeLists.txt  README.md
include/: gsl-parser.h
include/gsl-parser/: config.h  glb_p_log.h  gsl_err.h  gsl_log.h  gsl_task_spec.h
src/: parser.c  spec.c
tests/: CMakeLists.txt  main.c  parser_test.c  run_tests.c
